# CMakeUWP

./: CMakeLists.txt  CMakeSettings.json  CMakeUWP.cpp  CMakeUWP_TemporaryKey.pfx  README.md
